--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,6 @@
   <script src="https://use.fontawesome.com/bacad173cf.js"></script>
 </head>
 <body>
-  <app-root></app-root>1
+  <app-root></app-root>
 </body>
 </html>
